<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="@color/mainStyleWhite">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_waiting_pay"
            android:drawableTop="@drawable/vector_usercenter_waiting_pay"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:drawablePadding="@dimen/item_text_draw_padding"
            android:textSize="@dimen/text_size_12sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_waiting_receive"
            android:drawableTop="@drawable/vector_usercenter_waiting_receive"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:drawablePadding="@dimen/item_text_draw_padding"
            android:textSize="@dimen/text_size_12sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_waiting_judge"
            android:drawableTop="@drawable/vector_usercenter_waiting_judge"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:drawablePadding="@dimen/item_text_draw_padding"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_12sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_sales_return"
            android:drawableTop="@drawable/vector_usercenter_cancel_orders"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:drawablePadding="@dimen/item_text_draw_padding"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_12sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_my_order"
            android:drawableTop="@drawable/vector_order_24dp"
            android:drawableEnd="@drawable/inset_icon"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:drawablePadding="@dimen/item_text_draw_padding"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_12sp"/>
    </LinearLayout>
</layout>

