<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="click"
            type="android.view.View.OnClickListener"/>
    </data>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wk.youyibuy.ui.MainActivity">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_bottom_bar_height"
            android:background="@color/mainStyleWhite"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:paddingTop="@dimen/padding_2dp">
            <RadioButton
                android:id="@+id/rb_home_page"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/bottom_home_page_selector"
                android:text="@string/home_page"
                android:textColor="@color/bottom_text_selector"
                android:textSize="@dimen/text_size_12sp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/padding_5dp"
                android:paddingTop="@dimen/padding_5dp"
                android:button="@null"
                android:onClick="@{click}"
                />
            <RadioButton
                android:id="@+id/rb_category"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/bottom_classify_selector"
                android:text="@string/category"
                android:textColor="@color/bottom_text_selector"
                android:textSize="@dimen/text_size_12sp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/padding_5dp"
                android:paddingTop="@dimen/padding_5dp"
                android:button="@null"
                android:onClick="@{click}"/>
            <RadioButton
                android:id="@+id/rb_shopping_cart"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/bottom_shoppingcart_selector"
                android:text="@string/shopping_cart"
                android:textColor="@color/bottom_text_selector"
                android:textSize="@dimen/text_size_12sp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/padding_5dp"
                android:paddingTop="@dimen/padding_5dp"
                android:button="@null"
                android:onClick="@{click}"/>
            <RadioButton
                android:id="@+id/rb_user_center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/bottom_usercenter_selector"
                android:text="@string/user_center"
                android:textColor="@color/bottom_text_selector"
                android:textSize="@dimen/text_size_12sp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/padding_5dp"
                android:paddingTop="@dimen/padding_5dp"
                android:button="@null"
                android:onClick="@{click}"/>
        </RadioGroup>

        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/radioGroup">
        </FrameLayout>
    </RelativeLayout>
</layout>

